--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,9 @@
-<div class="d-flex justify-content-center" style="max-width: 90rem;">
-    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">Sign Up</div>
-    <div class="card-body">
-        
-    </div>
-    </div>
-</div>
+<ol class="post-list">
+    {{!-- Start loop through object array --}}
+    {{#each posts as |post| }}
+    <li>
+       {{> post-info post }}
+    </li>
+    {{!-- End loop --}}
+    {{/each}}
+</ol>
