--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,21 +13,21 @@
 <body>
     <div class="wrapper">
         <header>
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg bg-dark text-light">
                 <div class="container-fluid">
                     
                     <ul class="navbar-nav ">
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link text-light" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Dashboard</a>
+                        <a class="nav-link text-light" href="/dashboard">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link text-light" href="/login">Login</a>
                         </li>
                         <li class="nav-item">
-                        <button class="btn">Logout</button>
+                        <button class="btn text-light">Logout</button>
                         </li>
                     </ul>
                 </div>
