--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
     <div class="card text-bg-light mb-3" style="width: 50rem;">
     <div class="card-header">Login</div>
     <div class="card-body">
-        <form class="lgin-form">
+        <form class="login-form">
             <div>
                 <label for="user-login">Username</label>
                 <input type="text" id="user-login">
@@ -15,7 +15,9 @@
                 <button type="submit">Login!</button>
             </div>
         </form>
-        <a class="nav-link" href="#">Sign up instead</a>
+        <a class="nav-link" href="/signup">Sign up instead</a>
     </div>
     </div>
 </div>
+
+<script src="/javascript/login.js"></script>
