--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,20 +2,22 @@
     <div class="card text-bg-light mb-3" style="max-width: 18rem;">
     <div class="card-header">Sign Up</div>
     <div class="card-body">
-        <form class="lgin-form">
+        <form class="sign-up-form">
             <div>
-                <label for="user-login">Username</label>
-                <input type="text" id="user-login">
+                <label for="username-login">Username</label>
+                <input type="text" id="username-sign-up">
             </div>
             <div>
                 <label for="password-login">Password</label>
-                <input type="password" id="password-login">
+                <input type="password" id="password-sign-up">
             </div>
             <div>
                 <button type="submit">Sign Up!</button>
             </div>
         </form>
-        <a class="nav-link" href="#">Login instead</a>
+        <a class="nav-link" href="/login">Login instead</a>
     </div>
     </div>
 </div>
+
+<script src="/javascript/signup.js"></script>
