--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,10 +3,22 @@
   <ol>
     {{#each posts as |post|}}
     <li>
-      {{> post-info post}}
-      {{!-- <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a> --}}
+      <div class="card">
+        <div class="card-body">
+          {{title}} <span class="post-date">{{format_date created_at}}</span>
+        </div>
+      </div>
     </li>
     {{/each}}
   </ol>
 </section>
 {{/if}}
+
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-md-auto">
+      <button type="button" class="btn btn-secondary btn-lg bg-dark">+ New Post</button>
+    </div>
+    
+  </div>
+</div>
