--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,11 @@
 </section>
 {{/if}}
 
-<div class="container">
+<div class="container post-form">
+  
+</div>
+
+<div class="container add-post">
   <div class="row justify-content-md-center">
     <div class="col-md-auto">
       <button type="button" class="btn btn-secondary btn-lg bg-dark">+ New Post</button>
@@ -22,3 +26,5 @@
     
   </div>
 </div>
+
+<script src="/javascript/add-post.js"></script>
