--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,15 +1,19 @@
 <div class="d-flex justify-content-center" style="max-width: 90rem;">
-    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+    <div class="card text-bg-light mb-3" style="max-width: 50rem;">
     <div class="card-header">Sign Up</div>
     <div class="card-body">
         <form class="sign-up-form">
             <div>
                 <label for="username-login">Username</label>
-                <input type="text" id="username-sign-up">
+            </div>
+            <div>
+                <input type="text" class="input-login"  id="username-sign-up">
             </div>
             <div>
                 <label for="password-login">Password</label>
-                <input type="password" id="password-sign-up">
+            </div>
+            <div>
+                <input type="password" class="input-login"  id="password-sign-up">
             </div>
             <div>
                 <button type="submit">Sign Up!</button>
