--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -4,10 +4,12 @@
         <div class="card-header bg-dark text-light">
             <div class="post-name">
                 {{title}}
+                <span class="post-info">
+                    Posted by {{user.username}} on {{format_date created_at}}
+                </span>
             </div>
-            <div class="post-info">
-                Posted by {{user.username}} on {{format_date created_at}}
-            </div>        
+                
+                   
         </div>
         <div class="card-body">
             <p>
