Fixed the add new post form to create new post

--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -7,13 +7,13 @@
                 <label for="user-login ">Title</label>
             </div>
             <div>    
-                <input type="text" class="input-login" id="user-login">
+                <input type="text" class="input-login" id="user-login" name="post-title">
             </div>
             <div>
                 <label for="password-login ">Content</label>
             </div>
             <div>
-                <textarea name="comment" class="input-login" id="comment"></textarea>
+                <textarea class="input-login" id="comment" name="post-text"></textarea>
             </div>
             <div>
                 <button type="submit">Create!</button>
@@ -23,4 +23,6 @@
     </div>
     </div>
 </div>
+
+<script src="/javascript/add-post-form.js"></script>
 
