Added different navigation header depanding on page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <header>
             <nav class="navbar navbar-expand-lg bg-dark text-light">
-                <div class="container-fluid">
+                <div class="container-fluid navigation-bar">
                     
                     <ul class="navbar-nav ">
                         <li class="nav-item">
@@ -38,9 +38,7 @@
                 </div>
                 
             </nav>
-            <div class="bg-dark text-light">
-                <h1>The Tech Blog</h1>
-            </div>
+            
             
         </header>
         <main>
