--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,17 @@
 ol {
     list-style-type: none;
 }
+
+li {
+    margin-top: 25px
+}
+
+.page-header {
+    padding-left: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.navigation-bar {
+    padding-left: 40px;
+}
