--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,7 @@
+<div class="bg-dark text-light">
+    <h1 class="page-header">The Tech Blog</h1>
+</div>
+
 <ol class="post-list">
     {{!-- Start loop through object array --}}
     {{#each posts as |post| }}
