--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,7 @@
+<div class="bg-dark text-light">
+    <h1 class="page-header">The Tech Blog</h1>
+</div>
+
 <div class="d-flex justify-content-center" style="max-width: 90rem;">
     <div class="card text-bg-light mb-3" style="width: 50rem;">
     <div class="card-header">Login</div>
