--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
 <div class="container add-post">
   <div class="row justify-content-md-center">
     <div class="col-md-auto">
-      <button type="button" class="btn btn-secondary btn-lg bg-dark">+ New Post</button>
+      <button type="button" class="btn btn-secondary btn-lg bg-dark button-align">+ New Post</button>
     </div>
     
   </div>
