--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
     <li>
       <div class="card">
         <div class="card-body">
-          {{title}} <span class="post-date">{{format_date created_at}}</span>
+          <a href="/post/{{id}}" class="text-black">{{title}}</a> <span class="post-date text-black">{{format_date created_at}}</span>
         </div>
       </div>
     </li>
