--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,13 +1,20 @@
 <div class="comments">
     {{#each this}}
+
     <section class="comment">
-        <div class="meta">
-            {{!-- Added handlebars helper format_date to format the date correctly --}}
-            {{user.username}} on {{format_date created_at}}
-        </div>
-        <div class="text">
-            {{comment_text}}
+        <div class="card">
+            <div class="card-header bg-dark text-light">
+                <div class="post-name">
+                    Posted by {{user.username}} on {{format_date created_at}}
+                </div>         
+            </div>
+            <div class="card-body">
+                <p>
+                    {{comment_text}}
+                </p>
+            </div>
         </div>
     </section>
+
     {{/each}}
 </div>
