--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -3,7 +3,8 @@
     <div class="card">
         <div class="card-header bg-dark text-light">
             <div class="post-name">
-                {{title}}
+                <a href="/post/{{id}}" class="text-white">{{title}}</a>
+                
                 <span class="post-info">
                     Posted by {{user.username}} on {{format_date created_at}}
                 </span>
