--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
 
 <div class="d-flex justify-content-center" style="max-width: 90rem;">
     <div class="card text-bg-light mb-3" style="max-width: 50rem;">
-    <div class="card-header">Sign Up</div>
+    <div class="card-header bg-dark text-light">Sign Up</div>
     <div class="card-body">
         <form class="sign-up-form">
             <div>
@@ -20,7 +20,7 @@
                 <input type="password" class="input-login"  id="password-sign-up">
             </div>
             <div>
-                <button type="submit">Sign Up!</button>
+                <button type="submit" class="btn btn-dark">Sign Up!</button>
             </div>
         </form>
         <a class="nav-link" href="/login">Login instead</a>
