--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,9 +2,9 @@
     <h1 class="page-header">The Tech Blog</h1>
 </div>
 
-<div class="d-flex justify-content-center" style="max-width: 90rem;">
+<div class="d-flex justify-content-center login-menu" style="max-width: 90rem;">
     <div class="card text-bg-light mb-3" style="width: 50rem;">
-    <div class="card-header">Login</div>
+    <div class="card-header bg-dark text-light">Login</div>
     <div class="card-body">
         <form class="login-form">
             <div>
@@ -20,7 +20,7 @@
                 <input type="password" class="input-login" id="password-login">
             </div>
             <div>
-                <button type="submit">Login!</button>
+                <button type="submit" class="btn btn-dark">Login!</button>
             </div>
         </form>
         <a class="nav-link" href="/signup">Sign up instead</a>
