--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
     <h1 class="page-header">The Tech Blog</h1>
 </div>
 
-<div class="d-flex justify-content-center" style="max-width: 90rem;">
+<div class="d-flex justify-content-center sign-up-style" style="max-width: 90rem;">
     <div class="card text-bg-light mb-3" style="max-width: 50rem;">
     <div class="card-header bg-dark text-light">Sign Up</div>
     <div class="card-body">
