Styles new post form to match page. Fixed logout button in navigation bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,3 +98,11 @@ a {
 .sign-up-form > div {
     margin-top: 10px;
 }
+
+.add-post-style {
+    margin-top: 40px;
+}
+
+.logout-button {
+    margin-top: 10px;
+}
