--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -2,9 +2,9 @@
   <h1 class="page-header">Your Dashboard</h1>
 </div>
 
-<div class="d-flex justify-content-center" style="max-width: 90rem;">
+<div class="d-flex justify-content-center add-post-style" style="max-width: 90rem;">
     <div class="card text-bg-light mb-3" style="width: 50rem;">
-    <div class="card-header">Create New Post</div>
+    <div class="card-header bg-dark text-light">Create New Post</div>
     <div class="card-body">
         <form class="login-form">
             <div>
@@ -20,7 +20,7 @@
                 <textarea class="input-login" id="comment" name="post-text"></textarea>
             </div>
             <div>
-                <button type="submit">Create!</button>
+                <button type="submit" class="btn btn-dark">Create!</button>
             </div>
         </form>
     
