--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                         <a class="nav-link text-light" href="/dashboard">Dashboard</a>
                         </li>
                          <li class="nav-item">
-                        <button id="logout" class="btn text-light">Logout</button>
+                        <button id="logout" class="btn text-light logout-button">Logout</button>
                         </li>
                         {{else}}
                         <li class="nav-item">
